# e

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.test  Justfile  Makefile  PLAN.md  README.md  bump-version.sh  e  todo  todo.md
.claude/skills/commit/: SKILL.md
.github/workflows/: build.yml  release.yml
benches/: bench.rs
benchmarks/: baseline.json
benchmarks/history/: bench-history.md  bench-history.tsv
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command.rs  fuzz_cursor_deserialize.rs  fuzz_document.rs  fuzz_gap_buffer.rs  fuzz_highlight.rs  fuzz_keybind_parse.rs  fuzz_undo_deserialize.rs
src/: buffer.rs  clipboard.rs  command.rs  command_buffer.rs  document.rs  editor.rs  file_io.rs  find.rs  highlight.rs  keybind.rs  language.rs  lib.rs  main.rs  mouse.rs  operation.rs  render.rs  selection.rs  signal.rs  view.rs
tests/e2e/: clipboard.rs  commands.rs  display.rs  editing.rs  find_replace.rs  harness.rs  main.rs  mouse.rs  movement.rs  save_quit.rs  selection.rs  startup.rs  undo.rs
