[package]
name = "e"
version = "0.1.6"
edition = "2024"

[dependencies]
termion = "4"
regex-lite = "0.1"
libc = "0.2"

[dev-dependencies]
vt100 = "0.15"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
