[package]
name = "e"
version = "0.1.13"
edition = "2024"

[dependencies]
termion = "4"
regex-lite = "0.1"
rustix = { version = "1.1.4", features = ["runtime"] }

[dev-dependencies]
vt100 = "0.15"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

